Cleanup permission code (#460)